--- a/mallform/Views/Shared/_Layout.cshtml
+++ b/mallform/Views/Shared/_Layout.cshtml
@@ -21,8 +21,8 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                    <li>@Html.ActionLink("Rent A Shop", "Form", "LeasingForm")</li>
+                    <li>@Html.ActionLink("List Of Tenants", "Index", "Home")</li>
+                    <li>@Html.ActionLink("Add Tenant", "Form", "LeasingForm")</li>
                     
                 </ul>
                 @Html.Partial("_LoginPartial")
