delete a tenant list

--- a/mallform/Views/Home/Index.cshtml
+++ b/mallform/Views/Home/Index.cshtml
@@ -31,7 +31,7 @@
                 <td>@tenant.Address</td>
                 <td>@tenant.mobileNo</td>
                 <td>@tenant.panNo</td>
-               
+                <td>@Html.ActionLink("Delete", "Delete", "LeasingForm", new { id=tenant.Id }, null)</td>
                 
                     
                
