--- a/mallform/Content/Site.css
+++ b/mallform/Content/Site.css
@@ -1,6 +1,8 @@
 ﻿body {
     padding-top: 50px;
     padding-bottom: 20px;
+    color:midnightblue;
+    background-color:whitesmoke;
 }
 
 /* Set padding to keep content from hitting the edges */
@@ -22,3 +24,31 @@ select,
 textarea {
     max-width: 280px;
 }
+
+
+/*BOOT STRAP OVERRIDES*/
+.navbar-inverse {
+    background-color: dodgerblue;
+    border-color: dodgerblue;
+}
+
+.navbar-inverse .navbar-nav > li > a {
+    color: white;
+}
+
+.navbar-brand {
+  
+    font-weight: bold;
+}
+
+
+.navbar-inverse .navbar-brand {
+    color: white;
+}
+
+.btn-primary {
+    
+    background-color: dodgerblue;
+    border-color: dodgerblue;
+}
+
