--- a/mallform/Views/Shared/_Layout.cshtml
+++ b/mallform/Views/Shared/_Layout.cshtml
@@ -17,11 +17,11 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("Application name", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                @Html.ActionLink("MyTenants", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("List Of Tenants", "Index", "Home")</li>
+                    
                     <li>@Html.ActionLink("Add Tenant", "Form", "LeasingForm")</li>
                     
                 </ul>
