--- a/mallform/Views/Shared/_Layout.cshtml
+++ b/mallform/Views/Shared/_Layout.cshtml
@@ -23,6 +23,7 @@
                 <ul class="nav navbar-nav">
                     
                     <li>@Html.ActionLink("Add Tenant", "Form", "LeasingForm")</li>
+                    <li>@Html.ActionLink("Add a Unit", "Units", "Unit")</li>
                     
                 </ul>
                 @Html.Partial("_LoginPartial")
